  in gnulib.

  df now supports disk partitions larger than 4 TiB on MacOS X 10.5
  or newer and on AIX 5.2 or newer.

  shuf outputs small subsets of large permutations much more efficiently.
  For example `shuf -i1-$((2**32-1)) -n2` no longer exhausts memory.

  stat -f now recognizes the GPFS, MQUEUE and PSTOREFS file system types.

** Build-related

  Changes inherited from gnulib address a build failure on HP-UX 11.11
  when using /opt/ansic/bin/cc.


* Noteworthy changes in release 8.12 (2011-04-26) [stable]

** Bug fixes

  tail's --follow=name option no longer implies --retry on systems
  with inotify support.  [bug introduced in coreutils-7.5]

** Changes in behavior

  cp's extent-based (FIEMAP) copying code is more reliable in the face
  of varying and undocumented file system semantics:
  - it no longer treats unwritten extents specially
  - a FIEMAP-based extent copy always uses the FIEMAP_FLAG_SYNC flag.
      Before, it would incur the performance penalty of that sync only
      for 2.6.38 and older kernels.  We thought all problems would be
      resolved for 2.6.39.
  - it now attempts a FIEMAP copy only on a file that appears sparse.
      Sparse files are relatively unusual, and the copying code incurs
      the performance penalty of the now-mandatory sync only for them.

** Portability

  dd once again compiles on AIX 5.1 and 5.2


* Noteworthy changes in release 8.11 (2011-04-13) [stable]

** Bug fixes

  cp -a --link would not create a hardlink to a symlink, instead
  copying the symlink and then not preserving its timestamp.
  [bug introduced in coreutils-8.0]

  cp now avoids FIEMAP issues with BTRFS before Linux 2.6.38,
  which could result in corrupt copies of sparse files.
  [bug introduced in coreutils-8.10]

  cut could segfault when invoked with a user-specified output
  delimiter and an unbounded range like "-f1234567890-".
  [bug introduced in coreutils-5.3.0]

  du would infloop when given --files0-from=DIR