@@ -212,6 +212,7 @@ gnulib_modules="
   sys_stat
   sys_wait
   termios
+  timer-time
   timespec
   tzset
   uname
